Refactored base template so that all the main templates can use it.

--- a/www/aivs/templates/about.html
+++ b/www/aivs/templates/about.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
-{% block head %}{% endblock %}
-{% block container %}
-<h1>Why AIVScan?</h1>
+{% block content %}
+<div class="hero-unit">
+  <h1>Why AIVScan?</h1>
+</div>
 
 <p>Today, some of our most valuable assets are in the form of electronic information. As such, we must take measures to protect our data and ensure that it doesn’t fall into the wrong hands. External threats, whether hackers or viruses, are a concern that is difficult to evaluate and assess. AIVScan is designed to give individuals and organizations the ability to quickly and efficiently assess their external footprint.</p>
 
@@ -14,4 +15,3 @@
 
 <p>The primary goal of AIVScan is to improve the overall security profile of our users’ computers. If our clients follow through with our suggestions for improvement, they will improve their computer’s security and help protect their sensitive information.</p>
 {% endblock %}
-{% block scripts %}{% endblock %}
