--- a/www/aivs/templates/home.html
+++ b/www/aivs/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- note this page and the user profile are the only ones that do not extend base.html -->
+<!-- note this page does not extend base.html -->
 {% include "head_include.html" %}
 <style>
 .mainlogo {
@@ -34,9 +34,8 @@
 
   <div class="row">
 
-
      <div class="span8">
-      <h2>Stuff about AIVScan</h2>
+      <h2>What is AIVScan?</h2>
 <p>AIVScan is a web-based security evaluation application. Its primary goal is to efficiently and accurately assess the security of a computer. AIVScan is designed for all types of users, home or business, regardless of technical sophistication. Our service is an automatic security scan that determines Internet-accessible services, their vendor and version, and any known vulnerabilities that can endanger the user’s computer and stored information. The product will automatically obtain much of the information necessary to conduct the security scan, including IP address, operating system, and others.</p>
  <p>The primary goal of AIVScan is to improve the overall security profile of our users’ computers. If our clients follow through with our suggestions for improvement, they will improve their computer’s security and help protect their sensitive information.</p>
 
