--- a/www/aivs/templates/scan.html
+++ b/www/aivs/templates/scan.html
@@ -7,7 +7,7 @@
 }
 </style>{% endblock %}
 
-{% block container %}
+{% block content %}
 <div class="modal" style="position: relative; top: auto; left: auto; margin: 0 auto; z-index: 1; max-width: 100%;">
 <div class="modal-header">
   <h3>AIVScan is ready</h3>
@@ -42,7 +42,7 @@
     <div class="modal-footer">
       <a href="#" class="btn" data-dismiss="modal">Close</a>
       </div>
- </div>
+ </div></div>
 <!-- end terms and conditions modal -->
 
 {% endblock %}
