--- a/www/aivs/templates/base.html
+++ b/www/aivs/templates/base.html
@@ -9,17 +9,14 @@
 {% include "nav_include.html" %}
 
 <div class="container">
-  <div class="row">
-     <div class="span2"
-       <p><img src="{{ STATIC_URL }}img/aivscan_logo.png" height="150px" width="175px" /></p>
-     </div><!-- span2 -->
-     <div class="span8">
-     {% block container %}{% endblock %}
-       </div><!-- span8 -->
-</div> <!-- /container -->
+   {% include "user_sidebar.html" %}
+   <div class="span8">
+   {% block content %}{% endblock %}
+   </div>
+</div>
 
 {% include "footer_and_scripts.html" %}
 {% block scripts %}{% endblock %}
 
-  </body>
+</body>
 </html>
