added status timer to report list.

--- a/www/aivs/templates/profile.html
+++ b/www/aivs/templates/profile.html
@@ -24,5 +24,9 @@
 $("#scan_table").load("{% url reports %}", function() {
   return false;
 });
+window.setInterval( function() {
+    $("#scan_table").load("{% url reports %}");
+    return false;
+}, 10000);
 </script>
 {% endblock %}
