--- a/www/registration_backend/templates/registered.html
+++ b/www/registration_backend/templates/registered.html
@@ -2,7 +2,7 @@
 
 {% block head %}{% endblock %}
 
-{% block container %}
+{% block content %}
 <h2>Initial registration complete</h2>
 <p>To protect the safety of your computer, an authorization email has been sent to the email address you provided.  Check your email and click on the link sent to start your scan.</p>
 {% endblock %}
