--- a/www/aivs/templates/report_email.html
+++ b/www/aivs/templates/report_email.html
@@ -72,7 +72,7 @@ table {
             <table class="bubble">
               <tr>
                 <td><!-- Logo Img -->
-                  <a href="#"><img src="img/aivscan_logo_hero.png" alt="aivscan"></a>
+                  <a href="#"><img src="{% STATIC_URL %}img/aivscan_logo_hero.png" alt="aivscan"></a>
                 </td>
                 <td>
                   <p style="font-size:30px; font-weight:bold;">Scan Complete!</p><!-- Header -->
@@ -115,7 +115,7 @@ table {
                 </td>
               </tr>
             </table>
-            <p align="center" style="font-size:12px;">&copy Pwn Stars 2012</p><!-- /footer -->
+            <p align="center" style="font-size:12px;">&copy; Pwn Stars 2012</p><!-- /footer -->
           </td>
         </tr>
       </table><!-- /Border of Email -->
