--- a/www/aivs/templates/report.html
+++ b/www/aivs/templates/report.html
@@ -51,20 +51,26 @@
             <th>Status</th>
             <th>Description</th>
             <th>Feedback</th>
+            <th>Risk Level</th>
           </tr>
         </thead>
 <tbody>
 {% for port in ports %}
 <tr>
-  <td class="span2">{{ port.protocol }} / {{ port.port_number }}</td>
+  <td class="span2">{{ port.known_port.protocol }} / {{ port.known_port.port_number }}</td>
   <td class="span2">{{ port.state }}</td>
   <td>
-    {% if port.product %} {{ port.product }} {{ product.version }}
+    {% if port.known_port.description %}
+    {{ port.known_port.description }}
     {% else %}
-    {{ port.service_name }}
+        {% if port.product %} {{ port.product }} {{ product.version }}
+        {% else %}
+        {{ port.service_name }}
+        {% endif %}
     {% endif %}
   </td>
-  <td>{{ port.description }}</td>
+  <td>{{ port.known_port.mitigation }}</td>
+  <td>{{ port.known_port.risk_level }}</td>
 </tr>
 {% endfor %}
 
