registered.html and activation email edits.

--- a/www/registration_backend/templates/registered.html
+++ b/www/registration_backend/templates/registered.html
@@ -3,6 +3,17 @@
 {% block head %}{% endblock %}
 
 {% block content %}
-<h2>Initial registration complete</h2>
-<p>To protect the safety of your computer, an authorization email has been sent to the email address you provided.  Check your email and click on the link sent to start your scan.</p>
+<h2>Initial Registration Complete!</h2>
+<p>You're almost there! We've sent an email to the address you provided. Before we can start your scan, you need to click on the link in that email in order to authorize AIVScan. It also lets us authenticate your email address. Once you click on the link, you'll be directed back here.</p> 
+
+<p>Be sure to check your Spam folder, too!</p>
 {% endblock %}
+
+
+
+
+
+
+
+ 
+
