--- a/www/templates/registration/password_reset_form.html
+++ b/www/templates/registration/password_reset_form.html
@@ -1,6 +1,6 @@
 {% extends "base_modal.html" %}
 {% block modalform %}
-<form id="modal-form" method="post" action="{% url password_change %}" class="well form-vertical">
+<form id="modal-form" method="post" action="{% url password_reset %}" class="well form-vertical">
 
 <div class="modal-header">
   <h2>Change Password</h2>
