--- a/www/aivs/templates/nav_include.html
+++ b/www/aivs/templates/nav_include.html
@@ -18,7 +18,7 @@
               {% if user.is_staff %}
               <li><a href="{% url admin:index %}">Login to Admin</a></li>
               {% endif %}
-              <li><a href="{% url auth_logout %}">Sign Out</a></li>
+              <li><a href="{% url logout %}">Sign Out</a></li>
             </ul>
           {% else %}
             <ul class="nav">
