Password reset templates.

--- a/www/templates/registration/password_reset_confirm.html
+++ b/www/templates/registration/password_reset_confirm.html
@@ -1,6 +1,6 @@
 {% extends "base_modal.html" %}
 {% block modalform %}
-<form id="modal-form" method="post" action="{% url password_reset %}" class="well form-vertical">
+<form id="modal-form" method="post" action="{% url password_reset_confirm %}" class="well form-vertical">
 
 <div class="modal-header">
   <h2>Reset Password</h2>
@@ -13,10 +13,11 @@
 {{ form.as_p }}
 
 <div  class="form-actions">
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Reset</button>
   <a href="#" class="btn" data-dismiss="modal">Cancel</a>
-  <input type="hidden" name="next" value="{% url home %}">
+  <input type="hidden" name="next" value="{% url profile %}">
 </div>
 </form>
 </div> <!-- end modal body -->
 {% endblock %}
+
