--- a/www/templates/registration/password_reset_form.html
+++ b/www/templates/registration/password_reset_form.html
@@ -1,19 +1,21 @@
 {% extends "base_modal.html" %}
 {% block modalform %}
-<form id="modal-form" method="post" action="{% url password_reset %}" class="well form-vertical">
+<form id="modal-form" method="post" action="{% url password_change %}" class="well form-vertical">
 
 <div class="modal-header">
-  <h2>Change Password</h2>
+  <h2>Reset Password</h2>
 </div>
 
 <div class="modal-body">
-{% csrf_token %}
-{{ form.errors }}
-{{ form.non_field_errors }}
+  <p>We'll email a password reset link to the email you enter below.</p>
+  <hr>
+  {% csrf_token %}
+<span style="color:red">{{ form.errors }}</span>
+<span style="color:red">{{ form.non_field_errors }}</span>
 {{ form.as_p }}
 
 <div  class="form-actions">
-  <button type="submit" class="btn btn-primary">Login</button>
+  <button type="submit" class="btn btn-primary">Reset</button>
   <a href="#" class="btn" data-dismiss="modal">Cancel</a>
   <input type="hidden" name="next" value="{% url profile %}">
 </div>
