--- a/www/templates/registration/password_reset_confirm.html
+++ b/www/templates/registration/password_reset_confirm.html
@@ -1,12 +1,13 @@
 {% extends "base_modal.html" %}
 {% block modalform %}
-<form id="modal-form" method="post" action="{% url password_reset_confirm %}" class="well form-vertical">
+<form id="modal-form" method="post" action="" class="well form-vertical">
 
 <div class="modal-header">
   <h2>Reset Password</h2>
 </div>
 
 <div class="modal-body">
+  <p>Please enter your new password twice so we can verify you typed it in correctly.</p>
 {% csrf_token %}
 <span style="color:red">{{ form.errors }}</span>
 <span style="color:red">{{ form.non_field_errors }}</span>
