--- a/www/templates/registration/password_change_form.html
+++ b/www/templates/registration/password_change_form.html
@@ -7,9 +7,11 @@
 </div>
 
 <div class="modal-body">
-{% csrf_token %}
-{{ form.errors }}
-{{ form.non_field_errors }}
+  <p>Please enter your new password twice so we can verify it.</p>
+  <hr>
+  {% csrf_token %}
+<span style="color:red">{{ form.errors }}</span>
+<span style="color:red">{{ form.non_field_errors }}</span>
 {{ form.as_p }}
 
 <div  class="form-actions">
