--- a/www/templates/registration/password_reset_confirm.html
+++ b/www/templates/registration/password_reset_confirm.html
@@ -7,7 +7,8 @@
 </div>
 
 <div class="modal-body">
-  <p>Please enter your new password twice so we can verify you typed it in correctly.</p>
+  <p>Please enter your new password twice so we can verify it.</p>
+  <hr>
 {% csrf_token %}
 <span style="color:red">{{ form.errors }}</span>
 <span style="color:red">{{ form.non_field_errors }}</span>
