--- a/www/aivs/templates/report_email.html
+++ b/www/aivs/templates/report_email.html
@@ -72,7 +72,7 @@ table {
             <table class="bubble">
               <tr>
                 <td><!-- Logo Img -->
-                  <a href="#"><img src="{% STATIC_URL %}img/aivscan_logo_hero.png" alt="aivscan"></a>
+                  <a href="#"><img src="{{STATIC_URL}}img/aivscan_logo_hero.png" alt="aivscan"></a>
                 </td>
                 <td>
                   <p style="font-size:30px; font-weight:bold;">Scan Complete!</p><!-- Header -->
