--- a/www/aivs/templates/report_email.html
+++ b/www/aivs/templates/report_email.html
@@ -72,7 +72,7 @@ table {
             <table class="bubble">
               <tr>
                 <td><!-- Logo Img -->
-                  <a href="#"><img src="{{STATIC_URL}}img/aivscan_logo_hero.png" alt="aivscan"></a>
+                  <a href="#"><img src="https://{{site_name}}/img/aivscan_logo_hero.png" alt="aivscan"></a>
                 </td>
                 <td>
                   <p style="font-size:30px; font-weight:bold;">Scan Complete!</p><!-- Header -->
@@ -119,7 +119,7 @@ table {
             <!-- footer --------------------------------->
             <table align="center">
               <tr align="center" style="font-size:12px;">
-                <td><a href="#">View report in browser</a> &nbsp;|&nbsp;
+                <td><a href="https://{{site_name}}/profile">View report in browser</a> &nbsp;|&nbsp;
                   <a href="#">Go to the site</a> &nbsp;|&nbsp;
                   <a href="http://www.ic3.gov/default.aspx">Report us to the authorities</a>
                 </td>
